--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: content-box;
-}
-body {
-  background-image: url(hero-bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 1;
 }
 header{
     height: 100vh;
+    background-image: url(hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 20px; 
+  background-image: url(hero-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
   color: white;
+  position: sticky;
+  top: 0;
 }
 .heading {
   font-family: "Nunito", sans-serif;
@@ -66,8 +67,261 @@ header{
     border-radius: 20px;
     font-size: large;
 }
-.section-1{
-    background-color: white;
+.container{
+    background-color:white;
     margin-top: 50px;
-    height: 100vh;
+    padding-top:10px;
 }
+.tools p{
+    width: 50%;
+   padding-left:25%;
+}
+.tools h1{
+    font-weight: bold;
+}
+.do-container{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 70px;
+}
+.do-container img{
+    background-color:#353434;
+    border-style: none;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    align-items: center;
+}
+.do-container h3{
+    text-align: center;
+    padding: 10px;
+}
+.do-container img:hover{
+    background-color: #ffc107;
+}
+.container-1 .section-2{
+    display: flex;
+    justify-content: space-around;
+}
+.whoimg img{
+  padding-left: 60px;
+
+}
+.whoweare{
+    margin-top: 70px;
+}
+.whoweare button{
+ 
+   border: none;
+   color: white;
+   background-color:#353434;
+   padding-left: 15px;
+   padding-right: 15px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   margin-top: 50px;
+   border-top-right-radius: 10px;
+   border-bottom-left-radius: 10px;
+   border-top-left-radius: 10px;
+}
+.whoweare p{
+   text-align: justify;
+   width:700px;
+   font-size: large;
+}
+.container-3{
+    margin-top: 150px;
+}
+.section-3 h1{
+    font-weight: bold;
+    text-align: left;
+    padding-left: 50px;
+}
+.section-3 p{
+    padding-left: 50px;
+    padding-right: 40px;
+    text-align: left;
+    font-size: large;
+}
+.container-3 .section-3 .box img{
+    width: 100%;
+    margin-left: 10px;
+}
+.container-3 .section-3 .boximages{
+    margin-top: 50px;
+    margin-left: 90px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+}
+.container-3 .section-3 .box.b1{
+    width: 50.5%;
+}
+.container-3 .section-3 .box.b2{
+    width: 37.5%;
+}
+.container-3 .section-3 .box.b3{
+    width: 37.5%;
+}
+.container-3 .section-3 .box.b4{
+    width: 50.5%;
+}
+.container-4{
+    margin-top: 60px;
+}
+.target-section{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-image: url(target-bg.jpg);
+    background-size: cover;
+    color: white;
+    text-align: center;
+    height: 150px;
+    font-weight: bold;
+}
+.target-section h5{
+    margin-top: 8px;
+}
+.contact_section .contact_form input{
+    outline: none;
+    margin: 15px 0;
+    background: white;
+    width: 600px;
+    padding: 10px 20px;
+    border: 1px solid lightgray;
+    border-radius: 30px;
+    margin-left: 450px;
+    margin-right: 400px;
+}
+.contact_section .contact_form button{
+    margin-left: 700px;
+    padding: 12px 50px;
+    border-radius: 30px;
+    outline: none;
+    border: none;
+    background-color: #fec913;
+    color: white;
+    margin-top: 25px;
+    font-size: large;
+}
+.contact_section .contact_form .message{
+    height: 175px;
+}
+.contact_section .map_image{
+    padding-left: 300px;
+    margin-top: 30px;
+}
+
+.info-section {
+    background-color: #232323;
+    color: white;
+    padding: 90px 0 45px 0;
+}
+.info-section .container{
+    background-color: #232323;
+    color: white;
+}
+.info-section .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+.info-section h3{
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+.info-section .info_contact p{
+    margin: 0;
+    padding-left: 10px;
+}
+.info-section .info_contact>div{
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+.info-section .info_contact>div img{
+    vertical-align: middle;
+    border-style: none;
+}
+.info-section .info_contact .img_box{
+    width: 35px;
+    display: flex;
+    justify-content: center;
+}
+
+.info-section .info_contact div{
+    display: flex;
+    align-items: center;
+} 
+.info-section .info_info p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    width: 290px;
+    text-align: justify;
+}
+.info-section .info_insta .insta-container div{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+.info-section .info_insta .insta-container a{
+    background-color: gray;
+    text-decoration: none;
+    padding: 5px;
+}
+.info-section .info_form form input{
+    outline: none;
+    width: 100%;
+    padding: 7px 10px;
+}
+.info-section .info_form button{
+    display: inline-block;
+    background-color: #fec913;
+    color: white;
+    padding: 8px 30px;
+    outline: none;
+    margin-top:15px;
+    font-size: 15px;
+}
+.info-section .info_form .social_box {
+    margin-top: 35px;
+    text-decoration: none;
+    width: 100%;
+}
+.info-section .info_form .social_box a{
+    margin-right: 25px;
+}
+
+  /* footer section*/
+  .footer_section {
+    background-color: #232323;
+    font-weight: 500;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  
+  .footer_section p {
+    padding: 20px 65px;
+    color: #fbfcfd;
+    margin: 0 auto;
+    text-align: center;
+    border-top: 1px solid #ffffff;
+  }
+  
+  .footer_section a {
+    color: #fbfcfd;
+  }
+  
